# starshell

./: Cargo.toml  architecture.json  build.rs
.github/workflows/: release.yml
src/: config.rs  context.rs  main.rs  module.rs  print.rs
src/configs/: mod.rs  starship_root.rs
src/modules/: directory.rs  mod.rs
src/modules/utils/: mod.rs
src/test/: mod.rs
src/utils/: mod.rs  serde.rs
